removed info from config.ini

--- a/soccer_python/app/config.ini
+++ b/soccer_python/app/config.ini
@@ -1,13 +1,13 @@
 [mail]
-host=mailfwd.nih.gov
-admin=scott.goldweber@mail.nih.gov
+host=@host@
+admin=@admin@
 
 [soccer]
-port=8220
-folder.root=/local/content/analysistools/public_html/apps/soccer/
-folder.out=tmp
+port=@port@
+folder.root=@root@
+folder.out=@out@
 
 [queue]
-url=tcp://ncias-d1207-v.nci.nih.gov:61613
-name=/queue/soccer
-error.name=/queue/errorQueue
+url=@url@
+name=@name@
+error.name=@error@
