--- a/soccer_python/app/config.ini
+++ b/soccer_python/app/config.ini
@@ -1,11 +1,9 @@
+[folders]
+output=@out@
+
 [mail]
 host=@host@
 admin=@admin@
-
-[soccer]
-port=@port@
-folder.root=@root@
-folder.out=@out@
 
 [queue]
 url=@url@
