--- a/soccer_python/app/config.ini
+++ b/soccer_python/app/config.ini
@@ -1,11 +1,14 @@
-[folders]
-output=@out@
+[soccer]
+input_dir=@input_dir@
+output_dir=@output_dir@
+wordnet_dir=@wordnet_dir@
+model_file=@model_file@
 
 [mail]
-host=@host@
-admin=@admin@
+host=mailfwd.nih.gov
+admin=do.not.reply@nih.gov
 
 [queue]
-url=@url@
-name=@name@
-error.name=@error@
+url=@queue_url@
+name=@queue_name@
+error_name=@error_queue_name@
