--- a/soccer/config.ini
+++ b/soccer/config.ini
@@ -5,8 +5,8 @@ wordnet_dir=@wordnet_dir@
 model_file=@model_file@
 
 [mail]
-host=mailfwd.nih.gov
-admin=do.not.reply@nih.gov
+host=@mail_host@
+admin=@mail_admin@
 
 [queue]
 url=@queue_url@
