--- a/soccer/config.ini
+++ b/soccer/config.ini
@@ -1,7 +1,7 @@
 [soccer]
 input_dir=@input_dir@
 output_dir=@output_dir@
-wordnet_dir=@wordnet_dir@
+wordnet_dir=wordnet
 model_file=@model_file@
 
 [mail]
