add sqs queue parameters

--- a/soccer/config.ini
+++ b/soccer/config.ini
@@ -12,3 +12,17 @@ admin=@mail_admin@
 url=@queue_url@
 name=@queue_name@
 error_name=@error_queue_name@
+
+[s3]
+input_bucket = sandboxBucket
+output_bucket = sandboxBucket
+input_folder = soccer/
+output_folder = soccer/
+url_expire_time = 604800
+
+[sqs]
+queue_name = sandboxQueue
+queue_msg_retention_seconds = 604800
+visibility_timeout = 30
+queue_long_pull_time = 20
+pull_delay = 5
