--- a/config/config-sample.ini
+++ b/config/config-sample.ini
@@ -26,3 +26,8 @@ queue_msg_retention_seconds = 604800
 visibility_timeout = 30
 queue_long_pull_time = 20
 pull_delay = 5
+
+[logs]
+size=2000000
+rollover=100
+loglevel=DEBUG
