update model_file config

--- a/config/config-sample.ini
+++ b/config/config-sample.ini
@@ -2,7 +2,7 @@
 input_dir=@input_dir@
 output_dir=@output_dir@
 wordnet_dir=wordnet
-model_file=@model_file@
+model_file_1.1=@model_file@
 
 [mail]
 host=@mail_host@
