--- a/config/config-sample.ini
+++ b/config/config-sample.ini
@@ -6,7 +6,9 @@ model_file_1.1=@model_file@
 
 [mail]
 host=@mail_host@
-admin=@mail_admin@
+sender=
+adminSupport=
+techSupport=
 
 [queue]
 url=@queue_url@
