add sample configuration entry

--- a/config/config-sample.ini
+++ b/config/config-sample.ini
@@ -20,6 +20,7 @@ input_bucket = sandboxBucket
 output_bucket = sandboxBucket
 input_folder = soccer/
 output_folder = soccer/
+error_folder = soccer/
 url_expire_time = 604800
 
 [sqs]
