--- a/server/.env.example
+++ b/server/.env.example
@@ -2,8 +2,7 @@
 
 MODELS_FOLDER=../models
 JOBS_FOLDER=../jobs
-WORKER_TYPE=local
-SERVER_TIMEOUT=900
+TIMEOUT=900
 
 APPLICATION_HOST=localhost
 APPLICATION_NAME=soccer
@@ -16,6 +15,7 @@ EMAIL_SMTP_PORT=
 EMAIL_SMTP_USER=
 EMAIL_SMTP_PASSWORD=
 
+# Parameters below are used for ECS deployment (optional for local deployment)
 ECS_CLUSTER=
 ECS_WEB_SERVICE=
 ECS_WEB_TASK=
