--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -31,24 +31,24 @@ ErrorLog /dev/stderr
   # Header set Content-Security-Policy "default-src 'self';"
 
   # Set Referer header only when navigating within the same origin
-  Header set Referrer-Policy "same-origin"
+  Header always set Referrer-Policy "same-origin"
 
   # Enforce https
   <If "%{HTTP:X-Forwarded-Proto} == 'https'">
-    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
   </If>
 
   # Disable MIME type sniffing
-  Header set X-Content-Type-Options "nosniff"
+  Header always set X-Content-Type-Options "nosniff"
 
   # Only allow iframes from the same origin
-  Header set X-Frame-Options "SAMEORIGIN"
+  Header always set X-Frame-Options "SAMEORIGIN"
 
   # Enable xss protection
-  header set X-XSS-Protection "1; mode=block"
+  Header always set X-XSS-Protection "1; mode=block"
 
   # Prevent caching
-  Header unset ETag
-  Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
-  Header set Pragma "no-cache"
+  Header always unset ETag
+  Header always set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+  Header always set Pragma "no-cache"
 </IfModule>
