disable directory listing and multiviews

--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -26,6 +26,12 @@ ErrorLog /dev/stderr
 #   RemoteIPHeader X-Forwarded-For
 # </IfModule>
 
+# Disable directory listing and multiviews
+<Directory "/var/www/html">
+  AllowOverride None
+  Options +FollowSymLinks -MultiViews -Indexes
+</Directory>
+
 <IfModule headers_module>
   # Only allow content from the specified sources
   # Header set Content-Security-Policy "default-src 'self';"
